# face-detection

./: .gitignore  Makefile  pyproject.toml
core/: calculations.py  db.py  functions.py  visualization.py
face_detection/: cli.py
ui/: __main__.py  core.py  db.py  methods.py  visualization.py
